--- a/pricing.html
+++ b/pricing.html
@@ -174,7 +174,9 @@
         </thead>
         <tbody>
           <tr>
-            <td>SHIRT / T-SHIRT</td>
+            <td>
+              <img src="./images/laundry.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> T-SHIRT
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -201,7 +203,9 @@
             </td>
           </tr>
           <tr>
-            <td>JEANS / TROUSER</td>
+            <td>
+              <img src="./images/jeans.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> JEANS
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -228,7 +232,9 @@
             </td>
           </tr>
           <tr>
-            <td>PYJAMA</td>
+            <td>
+              <img src="./icons/pyjamas.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> PYJAMA
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -255,7 +261,9 @@
             </td>
           </tr>
           <tr>
-            <td>CASUAL PANT</td>
+            <td>
+              <img src="./icons/pants.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> PANT
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -282,7 +290,9 @@
             </td>
           </tr>
           <tr>
-            <td>HALF PANT</td>
+            <td>
+              <img src="./icons/shorts.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> HALF PANT
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -309,7 +319,9 @@
             </td>
           </tr>
           <tr>
-            <td>SPORTS WEAR</td>
+            <td>
+              <img src="./icons/tuxedo.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SPORTS WEAR
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -336,7 +348,9 @@
             </td>
           </tr>
           <tr>
-            <td>DHOTI / LUNGI</td>
+            <td>
+              <img src="./icons/dhoti.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> DHOTI / LUNGI
+            </td>
             <td>₹ 30</td>
             <td>
               <div class="qty">
@@ -363,7 +377,9 @@
             </td>
           </tr>
           <tr>
-            <td>SHERWANI</td>
+            <td>
+              <img src="./icons/SHERWANI.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SHERWANI
+            </td>
             <td>₹ 40</td>
             <td>
               <div class="qty">
@@ -390,7 +406,9 @@
             </td>
           </tr>
           <tr>
-            <td>JACKET / SWEAT SHIRT</td>
+            <td>
+              <img src="./icons/jacket.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> JACKET / SWEAT SHIRT
+            </td>
             <td>₹ 40</td>
             <td>
               <div class="qty">
@@ -417,7 +435,9 @@
             </td>
           </tr>
           <tr>
-            <td>WINTER JACKET</td>
+            <td>
+              <img src="./icons/denim-jacket.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> WINTER JACKET
+            </td>
             <td>N/A</td>
             <td>
               <div class="qty">
@@ -444,7 +464,9 @@
             </td>
           </tr>
           <tr>
-            <td>WOOLEN JACKET</td>
+            <td>
+              <img src="./icons/jacket.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> WOOLEN JACKET
+            </td>
             <td>₹ 40</td>
             <td>
               <div class="qty">
@@ -471,7 +493,9 @@
             </td>
           </tr>
           <tr>
-            <td>KURTA</td>
+            <td>
+              <img src="./icons/kurta.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> KURTA
+            </td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -498,7 +522,9 @@
             </td>
           </tr>
           <tr>
-            <td>VEST</td>
+            <td>
+              <img src="./icons/vest.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> VEST
+            </td>
             <td>₹ 10</td>
             <td>
               <div class="qty">
@@ -525,7 +551,9 @@
             </td>
           </tr>
           <tr>
-            <td>HANKY / SOCKS</td>
+            <td>
+              <img src="./icons/socks.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> HANKY / SOCKS
+            </td>
             <td>₹ 10</td>
             <td>
               <div class="qty">
@@ -552,7 +580,9 @@
             </td>
           </tr>
           <tr>
-            <td>BLAZER / SUIT</td>
+            <td>
+              <img src="./icons/suit (1).png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> BLAZER / SUIT
+            </td>
             <td>N/A</td>
             <td>
               <div class="qty">
@@ -579,7 +609,9 @@
             </td>
           </tr>
           <tr>
-            <td>SUIT 2PC</td>
+            <td>
+              <img src="./icons/suit.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SUIT 2PC
+            </td>
             <td>N/A</td>
             <td>
               <div class="qty">
@@ -595,12 +627,14 @@
             <td>₹ 120</td>
             <td>
               <div class="qty">
-                <<button>-</button> <span>0</span> <button>+</button>
+                <button>-</button> <span>0</span> <button>+</button>
               </div>
             </td>
           </tr>
           <tr>
-            <td>DUPATTA</td>
+            <td>
+              <img src="./icons/scarf.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> DUPATTA
+            </td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -627,34 +661,9 @@
             </td>
           </tr>
           <tr>
-            <td>STOLE</td>
-            <td>₹ 20</td>
             <td>
-              <div class="qty">
-                <button>-</button> <span>0</span> <button>+</button>
-              </div>
+              <img src="./icons/stole.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> STOLE
             </td>
-            <td>₹ 20</td>
-            <td>
-              <div class="qty">
-                <button>-</button> <span>0</span> <button>+</button>
-              </div>
-            </td>
-            <td>₹ 50</td>
-            <td>
-              <div class="qty">
-                <button>-</button> <span>0</span> <button>+</button>
-              </div>
-            </td>
-            <td>₹ 15</td>
-            <td>
-              <div class="qty">
-                <button>-</button> <span>0</span> <button>+</button>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>SCARF</td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -681,7 +690,38 @@
             </td>
           </tr>
           <tr>
-            <td>GLOVES</td>
+            <td>
+              <img src="./icons/scarf (1).png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SCARF
+            </td>
+            <td>₹ 20</td>
+            <td>
+              <div class="qty">
+                <button>-</button> <span>0</span> <button>+</button>
+              </div>
+            </td>
+            <td>₹ 20</td>
+            <td>
+              <div class="qty">
+                <button>-</button> <span>0</span> <button>+</button>
+              </div>
+            </td>
+            <td>₹ 50</td>
+            <td>
+              <div class="qty">
+                <button>-</button> <span>0</span> <button>+</button>
+              </div>
+            </td>
+            <td>₹ 15</td>
+            <td>
+              <div class="qty">
+                <button>-</button> <span>0</span> <button>+</button>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./icons/gloves.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> GLOVES
+            </td>
             <td>₹ 10</td>
             <td>
               <div class="qty">
@@ -708,7 +748,9 @@
             </td>
           </tr>
           <tr>
-            <td>SWEATER</td>
+            <td>
+              <img src="./icons/christmas-sweater.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SWEATER
+            </td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -735,7 +777,9 @@
             </td>
           </tr>
           <tr>
-            <td>LEGGINGS</td>
+            <td>
+              <img src="./icons/leggings.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> LEGGINGS
+            </td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -762,7 +806,9 @@
             </td>
           </tr>
           <tr>
-            <td>BLOUSE</td>
+            <td>
+              <img src="./icons/blouse.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> BLOUSE
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -789,7 +835,9 @@
             </td>
           </tr>
           <tr>
-            <td>PETTICOAT</td>
+            <td>
+              <img src="./icons/stylish-strapless-dress-with-belt-and-petticoat.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> PETTICOAT
+            </td>
             <td>₹ 10</td>
             <td>
               <div class="qty">
@@ -816,7 +864,9 @@
             </td>
           </tr>
           <tr>
-            <td>NIGHTY</td>
+            <td>
+              <img src="./icons/nightie.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> NIGHTY
+            </td>
             <td>₹ 20</td>
             <td>
               <div class="qty">
@@ -843,7 +893,9 @@
             </td>
           </tr>
           <tr>
-            <td>SKIRT</td>
+            <td>
+              <img src="./icons/skirt.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> SKIRT
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -898,7 +950,9 @@
         </thead>
         <tbody>
           <tr>
-            <td>SHIRT / T-SHIRT</td>
+            <td>
+              <img src="./icons/kidshirt.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;"> PYJAMA
+            </td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -925,7 +979,7 @@
             </td>
           </tr>
           <tr>
-            <td>HALF PANT</td>
+            <td> <img src="./icons/pants.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">HALF PANT</td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -979,7 +1033,7 @@
             </td>
           </tr>
           <tr>
-            <td>FROCK</td>
+            <td> <img src="./icons/frock.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">FROCK</td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -1006,7 +1060,7 @@
             </td>
           </tr>
           <tr>
-            <td>HALF PANT</td>
+            <td> <img src="./icons/pants.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">FULL PANT</td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -1033,7 +1087,7 @@
             </td>
           </tr>
           <tr>
-            <td>BLAZER</td>
+            <td><img src="./icons/suit (1).png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">BLAZER</td>
             <td>₹ 15</td>
             <td>
               <div class="qty">
@@ -1060,7 +1114,7 @@
             </td>
           </tr>
           <tr>
-            <td>GIRLS LAHENGA</td>
+            <td><img src="./icons/frock.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">GIRLS LAHENGA</td>
             <td>₹ 30</td>
             <td>
               <div class="qty">
@@ -1123,7 +1177,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>SINGLE BED SHEET</td>
+          <td><img src="./icons/bed.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">SINGLE BED SHEET</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1150,7 +1204,7 @@
           </td>
         </tr>
         <tr>
-          <td>DOUBLE BED SHEET</td>
+          <td><img src="./icons/blanket.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">DOUBLE BED SHEET</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1177,7 +1231,7 @@
           </td>
         </tr>
         <tr>
-          <td>BLANKET</td>
+          <td><img src="./icons/bed-sheets.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">BLANKET</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1204,7 +1258,7 @@
           </td>
         </tr>
         <tr>
-          <td>PILLOW COVERS</td>
+          <td><img src="./icons/bed-linen.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">PILLOW COVERS</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1231,7 +1285,7 @@
           </td>
         </tr>
         <tr>
-          <td>TABLE MATS</td>
+          <td><img src="./icons/placement.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">TABLE MATS</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1258,7 +1312,7 @@
           </td>
         </tr>
         <tr>
-          <td>TOWEL BATH</td>
+          <td><img src="./icons/towel.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">TOWEL BATH</td>
           <td>₹ 15</td>
           <td>
             <div class="qty">
@@ -1285,7 +1339,7 @@
           </td>
         </tr>
         <tr>
-          <td>CURTAIN</td>
+          <td><img src="./icons/curtains.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">CURTAIN</td>
           <td>₹ 30</td>
           <td>
             <div class="qty">
