--- a/pricing.html
+++ b/pricing.html
@@ -1339,7 +1339,8 @@
           </td>
         </tr>
         <tr>
-          <td><img src="./icons/curtains.png" alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">CURTAIN</td>
+          <td><img src="./icons/curtains.png
+            " alt="Shirt Image" style="width: 50px; height: auto; vertical-align: middle;">CURTAIN</td>
           <td>₹ 30</td>
           <td>
             <div class="qty">
@@ -1511,7 +1512,7 @@ data-stellar-background-ratio="0.5"
 </div>
 </section>
 
-  <footer class="footer ftco-section footer-cover">
+  <footer class="footer footer-cover">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-3 mb-4 mb-md-0">
