--- a/index.html
+++ b/index.html
@@ -991,9 +991,16 @@
     <section class="ftco-section" style="background-color: #FFCD00;">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
-          <div class="col-md-7 heading-section text-center ftco-animate">
-            <span class="subheading">News &amp; Blog</span>
-            <h2>Latest News</h2>
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <h2 style="color: #0074BC;">READ OUR
+              LATEST BLOG?</h2>
+            <div class="arrow-container">
+              <img src="./icons/—Pngtree—creative arrows_6019757.png" alt="Arrow" class="custom-arrow">
+            </div>
+            <h5 style="font-weight: 500;">
+              New perspectives. Latest trends. Curated ideas. Or laundry tips.
+Our blog is like a wardrobe for the mind…
+            </h5>
           </div>
         </div>
         <div class="row d-flex">
@@ -1084,14 +1091,23 @@
 <div class="pt-5"></div>
     <section
       class="ftco-section ftco-intro"
-      style="background-image: url('images/bg_3.jpg')"
+      style="background-image: url('./icons/pexels-pixabay-40784.jpg')"
       data-stellar-background-ratio="0.5"
     >
       <div class="overlay"></div>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
-            <h2>Together we will explore new things</h2>
+            <div class="col-md-12 heading-section text-center ftco-animate">
+              <h2 style="color: white;">Learn How we Saved Every Drops of Water Of MotherLand</h2>
+              <div class="arrow-container">
+                <img src="./icons/—Pngtree—creative arrows_6019757.png" alt="Arrow" class="custom-arrow">
+              </div>
+              <h5 style="font-weight: 500; color: white;">
+                WATER SAVED BY LAUGH-O-LAUNDRY
+3,577,804 L
+              </h5>
+            </div>
             <a
               href=""
               class="icon-video d-flex align-items-center justify-content-center"
@@ -1101,15 +1117,19 @@
         </div>
       </div>
     </section>
+    <section class="ftco-section"></section>
 
-    <section class="ftco-section testimony-section ftco-bg-dark">
+    <section class="ftco-section testimony-section" style="background-color: #FFCD00;">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
-          <div
-            class="col-md-7 heading-section heading-section-white text-center ftco-animate"
-          >
-            <span class="subheading">Testimonies</span>
-            <h2>Happy Customer</h2>
+          <div class="col-md-12 heading-section text-center ftco-animate">
+            <h2 style="color: #0074BC;">Our Customers</h2>
+            <div class="arrow-container">
+              <img src="./icons/—Pngtree—creative arrows_6019757.png" alt="Arrow" class="custom-arrow">
+            </div>
+            <h5 style="font-weight: 500;">
+              People will talk – and we love it. Because they are saying the nicest things about our service. Looks like we’re becoming the go-to choice across all corners of Kolkata. We take it as great feedback and heartening validation. We can’t wait to hear about your experience too!
+            </h5>
           </div>
         </div>
         <div class="row ftco-animate">
