--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div
       class="hero-wrap js-fullheight"
       style="
-        background-image: url('images/row-folded-colorful-soft-napkin-against-blue-background.jpg');
+        background-image: url('icons/pexels-berend-1452701.jpg');
         background-color: rgba(0, 0, 0, 1);
       "
       data-stellar-background-ratio="0.5"
@@ -486,10 +486,10 @@
                   </li>
                   <li>
                     <span class="fa fa-check mr-2"></span>Weekly for Any 5 Loads
-                    with 10% Discount
+                    with 10% Discount *
                   </li>
                   <li>
-                    <span class="fa fa-check mr-2"></span>50 Loads of Laundry
+                    <span class="fa fa-check mr-2"></span>50 Loads of Laundry *
                   </li>
                   <li><span class="fa fa-check mr-2"></span>Express Service</li>
                 </ul>
@@ -524,7 +524,7 @@
                   </li>
                   <li>
                     <span class="fa fa-check mr-2"></span>12 Loads of Laundry
-                    per Month
+                    per Month *
                   </li>
                   <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
                 </ul>
@@ -559,7 +559,7 @@
                   </li>
                   <li>
                     <span class="fa fa-check mr-2"></span>Subscription Covers
-                    5-10 Loads
+                    5-10 Loads *
                   </li>
                   <li><span class="fa fa-check mr-2"></span>Deep Cleaning</li>
                 </ul>
@@ -585,7 +585,7 @@
       </div>
       <section class="card__container">
         <div class="best-seller">
-          <div class="card__bx" style="--clr: #5b98eb">
+          <div class="card__bx" style="--clr: yellow">
             <div class="card__data">
               <div class="card__icon">
                 <img
@@ -626,7 +626,7 @@
               </div>
             </div>
           </div>
-          <div class="card__bx" style="--clr: #6850A1">
+          <div class="card__bx" style="--clr: #FFFF00">
             <div class="card__data">
               <div class="card__icon">
                 <img
@@ -644,7 +644,7 @@
               </div>
             </div>
           </div>
-          <div class="card__bx" style="--clr: #009599">
+          <div class="card__bx" style="--clr: #89ec5b">
             <div class="card__data">
               <div class="card__icon">
                 <img
@@ -693,7 +693,7 @@
           <div class="col-md-6 d-flex">
             <div
               class="img d-flex align-items-center justify-content-center py-5 py-md-0"
-              style="background-image: url(images/psychedelic-paper-shapes-with-copy-space.jpg)"
+              style="background-image: url(icons/pexels-planeteelevene-2517866.jpg)"
             >
               <div class="time-open-wrap">
                 <div class="desc p-4">
@@ -1023,10 +1023,10 @@ Our blog is like a wardrobe for the mind…
                     <span>04 March 2024</span>
                   </div>
                 </div>
-                <h3 class="heading">
+                <h3 class="heading" style="color: #0074BC;">
                   <a href="#">10 Tips to maintain your cloths</a>
                 </h3>
-                <p>
+                <p style="color: white;">
                   Keep It Clean, Keep It Fresh: Your Clothes Deserve the Best!
                 </p>
               </div>
@@ -1055,7 +1055,7 @@ Our blog is like a wardrobe for the mind…
                 <h3 class="heading">
                   <a href="#">Suits are Sensitives</a>
                 </h3>
-                <p>Handle with Care for a Perfect Wear</p>
+                <p style="color: white;">Handle with Care for a Perfect Wear</p>
               </div>
             </div>
           </div>
@@ -1081,7 +1081,7 @@ Our blog is like a wardrobe for the mind…
                 <h3 class="heading">
                   <a href="#">Washing Tips</a>
                 </h3>
-                <p>Preserve, Protect, and Perfect Your Wardrobe!</p>
+                <p style="color: white;">Preserve, Protect, and Perfect Your Wardrobe!</p>
               </div>
             </div>
           </div>
