--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <div
       class="hero-wrap js-fullheight"
       style="
-        background-image: url('icons/pexels-reneterp-13036797.jpg');
+        background-image: url('icons/pexels-cottonbro-5901622.jpg');
         background-color: rgba(0, 0, 0, 1);
       "
       data-stellar-background-ratio="0.5"
@@ -153,11 +153,11 @@
           data-scrollax-parent="true"
         >
           <div class="col-md-6 popup-animated-lines">
-            <h2 class="subheading">Leave the Laundry cleaning chores to us</h2>
-            <h1 class="mb-4">
-              Enjoy one Day Free Pickup and Delivery so that you take care of
-              your laundry needs
-            </h1>
+            <div class="col-md-12 heading-section text-center ftco-animate">
+              <h2  class="py-6" style="color: yellow; text-align: left;">Why Laugh-O-Laundry...?</h2>
+              <h5 style="font-weight: 500; color: white; text-align: left;">Word’s got around, hasn’t it? We are Kolkata’s shiny new web backed by world-class facilites. We pick up and deliver at your doorstep... and that too at amazingly affordable prices. Everyday laundry, next-day delivery! Couldn’t get better than that.</h5>
+             
+            </div>
             <p>
               <a href="#" class="btn btn-primary mr-md-4 py-2 px-4">
                 Learn more <span class="ion-ios-arrow-forward"></span>
