--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@ Our blog is like a wardrobe for the mind…
         <div class="row justify-content-center">
           <div class="col-md-8 text-center">
             <div class="col-md-12 heading-section text-center ftco-animate">
-              <h2 style="color: white;">Learn How we Saved Every Drops of Water Of MotherLand</h2>
+              <h2 style="color: white;">Learn How we Saved Every Drops of Water Of Earth</h2>
               <div class="arrow-container">
                 <img src="./icons/—Pngtree—creative arrows_6019757.png" alt="Arrow" class="custom-arrow">
               </div>
