--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ Our blog is like a wardrobe for the mind…
               </h5>
             </div>
             <a
-              href=""
+              href="https://www.youtube.com/watch?v=aGA0hRLR7Z8"
               class="icon-video d-flex align-items-center justify-content-center"
               ><span class="fa fa-play"></span
             ></a>
